fix(#3): try fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,6 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-block: 5rem;
-  scrollbar-gutter: stable;
 }
 
 html,
